# pencilpusher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: HOW_IT_WORKS.md
examples/: README.md  run_demo.py
examples/expected/: application_form_filled.docx
examples/inbox/: application_form.docx
examples/sources/: jane_moyo_id.md  jane_moyo_passport.md  moyo_mining_pacra.md
skills/pencilpusher/: SKILL.md  reference.md
src/pencilpusher/: __init__.py  cli.py  config.py
src/pencilpusher/fill/: __init__.py  detector.py  docx_filler.py  matcher.py  pdf_filler.py  pipeline.py  prober.py
src/pencilpusher/ingest/: __init__.py  extractor.py  pipeline.py  reader.py
src/pencilpusher/vault/: __init__.py  crypto.py  store.py
src/pencilpusher/wiki/: __init__.py  lint.py  pages.py
tests/: test_agent_mode.py  test_form.docx  test_vault.py
